2015-08-18  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* sysdeps/powerpc/dl-procinfo.c:
	(_dl_powerpc_cap_flags): Added missing strings for some
	hwcap features.
	* sysdeps/powerpc/dl-procinfo.h: Updated hwcap bit count.

2015-08-18  Paul Eggert  <eggert@cs.ucla.edu>

	Port the 0x7efe...feff pattern to GCC 6.
	See Steve Ellcey's bug report in:
	https://sourceware.org/ml/libc-alpha/2015-07/msg00673.html
	* string/memrchr.c (MEMRCHR):
	* string/rawmemchr.c (RAWMEMCHR):
	* string/strchr.c (strchr):
	* string/strchrnul.c (STRCHRNUL):
	Rewrite code to avoid issues with signed shift overflow.

2015-08-18  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86/cpu-features.c (init_cpu_features): Check
	whether cpuid is available only if HAS_CPUID is 0.
	* sysdeps/x86/cpu-features.h (HAS_CPUID): New.
	(HAS_I586): Likewise.
	(HAS_I686): Likewise.

2015-08-18  Marko Myllynen  <myllynen@redhat.com>

	[BZ #16973]
	* locales/eu_ES: Fix lang_lib.
	* locales/lb_LU: Likewise.
	* locales/my_MM: Likewise.
	* locales/sr_ME: Likewise.
	* locales/sr_RS: Likewise.
	* locales/sr_RS@latin: Likewise.
	* locales/tr_TR: Likewise.
	* locales/lo_LA: Fix lang_term.
	* locales/km_KH: Fix lang_ab, lang_term, lang_lib.

2015-08-18  Zack Weinberg  <zackw@panix.com>

	* misc/Versions (libc): Add GLIBC_2.23.

2015-08-18  Alan Modra  <amodra@gmail.com>

	[BZ #18421]
	* sysdeps/hppa/start.S [SHARED]: Use .section .data.rel.ro and define
	.Lp__global.
	(_start): Load %dp via .Lp__global.
	[!SHARED]: Use .section .rodata.

2015-08-18  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/hppa/bits/timerfd.h: New file.
	* sysdeps/unix/sysv/linux/hppa/sys/timerfd.h: Delete.

2015-08-18  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/hppa/bits/signalfd.h: New file.
	* sysdeps/unix/sysv/linux/hppa/sys/signalfd.h: Delete.

2015-08-18  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/hppa/bits/inotify.h: New file.
	* sysdeps/unix/sysv/linux/hppa/sys/inotify.h: Delete.
