@@ -83,7 +83,7 @@ static void __attribute_used__ __mcount (u_long frompc, u_long selfpc)
 #endif
 
 #if _MIPS_SIM == _ABIN32
-# if __mips_isa_rev < 6
+# if !defined __mips_isa_rev || __mips_isa_rev < 6
 #  define PTR_ADDU_STRING "add" /* no u */
 #  define PTR_SUBU_STRING "sub" /* no u */
 # else
